# NetWatchAI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  blog_draft.md  capture.py  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  train.py
.streamlit/: config.toml
data/: sample_packets.csv
src/: __init__.py  cli.py  detector.py  feature_extractor.py  model.py  sniffer.py  utils.py
tests/: test_dashboard_logic.py  test_detector.py  test_feature_extractor.py  test_full_app.py  test_integration.py  test_model.py  test_sniffer.py  test_utils.py
