[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netwatchai"
version = "1.0.0"
description = "AI-powered network monitoring and intrusion detection system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Udaya K"}]
keywords = ["network", "security", "intrusion-detection", "machine-learning", "anomaly-detection", "ids"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "scapy>=2.5.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/udayak/NetWatchAI"
Repository = "https://github.com/udayak/NetWatchAI"
Issues = "https://github.com/udayak/NetWatchAI/issues"

[project.scripts]
netwatchai-train = "src.cli:run_train"
netwatchai-capture = "src.cli:run_capture"
netwatchai-dashboard = "src.cli:run_dashboard"
